--- a/src/shared/ui/select/Select.module.scss
+++ b/src/shared/ui/select/Select.module.scss
@@ -68,8 +68,7 @@
     transition: all 0.5s;
     &.small {
       width: 60px;
-      top: 30px;
-      left: -10px;
+      left: 2px;
       transition: all 0.5s;
     }
     &:hover {
